# test_case_abol

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.test.yml  docker-compose.yml  env-example  env-example.test  pyproject.toml  requirements.txt
grpc_app/grpc_client/: Dockerfile  grpc_client.py
grpc_app/grpc_server/: Dockerfile  books.proto  books_pb2.py  database.py  grpc_server.py  models.py
grpc_client/: Dockerfile  grpc_client.py
src/: Dockerfile  entrypoint.sh
src/api/: main.py
src/api/brokers/: rabbitmq.py
src/api/endpoints/v1/: books.py  users.py
src/api/schemas/api/v1/: base.py  books.py  users.py
src/api/schemas/db/: book.py  user.py
src/api/services/: base.py  book.py  start_up.py  user.py
src/api/validators/: __init__.py  abstract.py  base.py  book.py  user.py
src/cache/: abstract.py  redis.py
src/configs/: __init__.py  rabbitmq.py  start_up.py
src/db/clients/: postgres.py
src/db/entities/: __init__.py  base.py  book.py  user.py
src/db/repositories/: abstract.py  base.py  book.py  user.py
src/grpc_server/: Dockerfile  books_pb2_grpc.py  database.py  grpc_server.py
src/migrations/: env.py
src/migrations/versions/: 3aa60a74f5bc_.py
src/utils/: pagination.py  retry_decorator.py  settings.py
tests/: Dockerfile  entrypoint.sh  models.py
tests/functional/: conftest.py  settings.py
tests/functional/fixtures/: connections.py  db_operations.py
tests/functional/src/: test_books.py  test_grpc.py  test_users.py
tests/utils/: books_pb2_grpc.py
